<resources>
    <string name="app_name">Touche Time</string>
    <string name="round_1">ROUND 1</string>
    <string name="round_2">ROUND 2</string>
    <string name="interval">INTERVALO</string>
    <string name="category">Categoria</string>
    <string name="style">Estilo</string>
    <string name="weight">Peso</string>
    <string name="go_fight_today">Vamos lutar \nhoje?</string>
    <string name="official_fight">Luta oficial</string>
    <string name="create_or_choose_athletes">Criar/Escolher atletas</string>
    <string name="create_athlete">Criar atleta</string>
    <string name="red_athlete">Atleta vermelho</string>
    <string name="blue_athlete">Atleta azul</string>
    <string name="select_athlete_title">Selecione seu atleta</string>
    <string name="select_athlete_description">Caso não encontre seu nome, você poderá inserir</string>
    <string name="choose_fight_description">Informe o nome dos atletas e utilize as regras oficiais para cada categoria</string>
    <string name="custom_fight">Personalize sua luta</string>
    <string name="custom_fight_description">Defina o tempo, superioridade técnica e quantidade de rounds</string>
    <string name="set_rules_of_the_fight">Defina as regras da luta</string>
    <string name="technical_superiority">Superioridade técnica</string>
    <string name="number_rounds">Quantidade de rounds</string>
    <string name="time_rounds">Tempo de cada rounds</string>
    <string name="time_interval_of_round">Tempo de cada intervalo</string>
    <string name="start_fight">Iniciar luta</string>
    <string name="greco_roman">Greco Roman</string>
    <string name="free_style">Free Style</string>
    <string name="woman_wrestling">Woman Wrestling</string>
    <string name="category_title">Escolha a categoria</string>
    <string name="category_description">Escolha entre os pesos oficiais de cada categoria</string>
    <string name="style_title">Escolha seu estilo</string>
    <string name="style_description">Escolha entre Estilo Livre, Greco-Romana e Livre Feminino</string>
    <string name="weight_title">Escolha o peso</string>
    <string name="weight_description">Escolha entre os pesos oficiais de cada categoria</string>
    <string name="choose">Escolher</string>
    <string name="category_childish">Infantil</string>
    <string name="category_u13">U13</string>
    <string name="category_u15">U15</string>
    <string name="category_u17">U17</string>
    <string name="category_u20">U20</string>
    <string name="category_senior">Sênior</string>
    <string name="years">Idade</string>
    <string name="name">Nome</string>
    <string name="athlete_not_found">Nenhum atleta cadastrado</string>
</resources>