<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/spacing_normal"
    android:paddingTop="@dimen/spacing_x_large">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_left" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/official_fight" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_category"
        style="@style/TextViewTitleFragmentCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="?attr/selectableItemBackground"
        android:text="@string/category" />

    <FrameLayout
        android:id="@+id/container_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <br.touchetime.ui.common.ChooseFight
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/category_selected"
                style="@style/TextViewCategory"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/background_category_style_weight"
                android:gravity="center"
                android:text="Sênior"
                android:textColor="?colorTextSecondary"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/category"
                app:layout_constraintEnd_toEndOf="@id/category"
                app:layout_constraintStart_toStartOf="@id/category"
                app:layout_constraintTop_toTopOf="@id/category"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_style"
        style="@style/TextViewTitleFragmentCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_x_large"
        android:enabled="false"
        android:text="@string/style"
        android:textColor="@color/text_color_enabled_disabled_primary" />

    <FrameLayout
        android:id="@+id/container_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <br.touchetime.ui.common.ChooseFight
                android:id="@+id/style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:enabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/style_selected"
                style="@style/TextViewCategory"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/background_category_style_weight"
                android:gravity="center"
                android:text="Greco-Roman"
                android:textColor="?colorTextSecondary"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/style"
                app:layout_constraintEnd_toEndOf="@id/style"
                app:layout_constraintStart_toStartOf="@id/style"
                app:layout_constraintTop_toTopOf="@id/style"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_weight"
        style="@style/TextViewTitleFragmentCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_x_large"
        android:enabled="false"
        android:text="@string/weight"
        android:textColor="@color/text_color_enabled_disabled_primary" />

    <FrameLayout
        android:id="@+id/container_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <br.touchetime.ui.common.ChooseFight
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:enabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weight_selected"
                style="@style/TextViewCategory"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/background_category_style_weight"
                android:gravity="center"
                android:text="72 KG"
                android:textColor="?colorTextSecondary"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/weight"
                app:layout_constraintEnd_toEndOf="@id/weight"
                app:layout_constraintStart_toStartOf="@id/weight"
                app:layout_constraintTop_toTopOf="@id/weight"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>